force-app/main/default/objects/Room__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description
  >Cantidad máxima de huéspedes que puede alojar la habitación.</description>
    <label>Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>