force-app/main/default/objects/Room__c/fields/Nightly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Rate__c</fullName>
    <description
  >Tarifa por noche de la habitación. Se usa como base para calcular Total_Amount__c en Reservation__c (vía trigger de Apex en Fase 2).</description>
    <label>Nightly Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>