force-app/main/default/objects/Room__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description
  >Propiedad a la que pertenece esta habitación. Relación Master-Detail: si se elimina la propiedad, se eliminan también sus habitaciones asociadas. Habilita el Roll-Up Summary Room_Count__c en Property__c y propaga el sharing del padre — relevante para las Sharing Rules del Guest User.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>