force-app/main/default/objects/Room__c/fields/Reservation_Count__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Count__c</fullName>
    <description
  >Cantidad de reservas asociadas a esta habitación. Roll-Up Summary (COUNT) sobre Reservation__c, posible gracias a la relación Master-Detail Reservation__c.Room__c.</description>
    <label>Reservation Count</label>
    <summaryForeignKey>Reservation__c.Room__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>