force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description
  >Tipo de habitación. Valores: Single, Double, Suite, Studio. Se usa para mostrar el tipo en las tarjetas del LWC y para filtrar disponibilidad por tipo.</description>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>